# MailArchiver

./: .clang-format  .format_with_clang.sh  CMakeLists.txt  COPYING  MailArchiver.kdev4  QMailArchiver.cpp  QMailArchiver.h  QMailArchiver.kdev4  README  main.cpp
3rd/md5-cc/: md5.cc  md5.hh
include/: ArchiveManager.h  MailArchive.h  MailArchiverWidget.h  MailListDelegate.h  MailListModel.h  QueryStrings.h  SingleApp.h  msg.h  utils.h
res/: MailArchiverWidget.qrc  search.xcf
src/: ArchiveManager.cpp  MailArchive.cpp  MailArchiverWidget.cpp  MailArchiverWidget.ui  MailListDelegate.cpp  MailListModel.cpp  SingleApp.cpp  main.cpp  msg.cpp  utils.cpp
tests/: launch_twice.sh
